@@ -6,6 +6,9 @@
  * This file is part of the K3b project.
  * Copyright (C) 1998-2004 Sebastian Trueg <trueg@k3b.org>
  *
+ * Parts of this file are inspired (and copied) from transport.hxx
+ * from the dvd+rw-tools (C) Andy Polyakov <appro@fy.chalmers.se>
+ *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or
@@ -22,10 +25,30 @@
 #undef __STRICT_ANSI__
 #include <linux/cdrom.h>
 #define __STRICT_ANSI__
-
+#include <scsi/sg.h>
 
 #include <unistd.h>
 #include <sys/types.h>
+#include <sys/utsname.h>
+
+
+#if !defined(SG_FLAG_LUN_INHIBIT)
+# if defined(SG_FLAG_UNUSED_LUN_INHIBIT)
+#  define SG_FLAG_LUN_INHIBIT SG_FLAG_UNUSED_LUN_INHIBIT
+# else
+#  define SG_FLAG_LUN_INHIBIT 0
+# endif
+#endif
+
+#ifdef SG_IO
+static bool useSgIo()
+{
+  struct utsname buf;
+  uname( &buf );
+  // was CDROM_SEND_PACKET declared dead in 2.5?
+  return ( strcmp( buf.release, "2.5.43" ) >=0 );
+}
+#endif
 
 
 class K3bDevice::ScsiCommand::Private
@@ -33,6 +56,11 @@ class K3bDevice::ScsiCommand::Private
 public:
   struct cdrom_generic_command cmd;
   struct request_sense sense;
+
+#ifdef SG_IO
+  bool useSgIo;
+  struct sg_io_hdr sgIo;
+#endif
 };
 
 
@@ -43,11 +71,20 @@ void K3bDevice::ScsiCommand::clear()
 
   d->cmd.quiet = 1;
   d->cmd.sense = &d->sense;
+
+#ifdef SG_IO
+  d->useSgIo = useSgIo();
+  ::memset( &d->sgIo, 0, sizeof(struct sg_io_hdr) );
+#endif
 }
 
 
 unsigned char& K3bDevice::ScsiCommand::operator[]( size_t i )
 {
+#ifdef SG_IO
+  if( d->sgIo.cmd_len < i+1 )
+    d->sgIo.cmd_len = i+1;
+#endif
   return d->cmd.cmd[i];
 }
 
@@ -67,21 +104,49 @@ int K3bDevice::ScsiCommand::transport( TransportDirection dir,
 
   if( m_deviceHandle == -1 )
     return -1;
-  
-  d->cmd.buffer = (unsigned char*)data;
-  d->cmd.buflen = len;
-  if( dir == TR_DIR_READ )
-    d->cmd.data_direction = CGC_DATA_READ;
-  else if( dir == TR_DIR_WRITE )
-    d->cmd.data_direction = CGC_DATA_WRITE;
-  else
-    d->cmd.data_direction = CGC_DATA_NONE;
 
-  int i = ::ioctl( m_deviceHandle, CDROM_SEND_PACKET, &d->cmd );
+  int i = -1;
+
+#ifdef SG_IO
+  if( d->useSgIo ) {
+    d->sgIo.interface_id= 'S';
+    d->sgIo.mx_sb_len = sizeof( struct request_sense );
+    d->sgIo.cmdp      = d->cmd.cmd;
+    d->sgIo.sbp       = (unsigned char*)&d->sense;
+    d->sgIo.flags     = SG_FLAG_LUN_INHIBIT|SG_FLAG_DIRECT_IO;
+    d->sgIo.dxferp    = data;
+    d->sgIo.dxfer_len = len;
+    if( dir == TR_DIR_READ )
+      d->sgIo.dxfer_direction = SG_DXFER_FROM_DEV;
+    else if( dir == TR_DIR_WRITE )
+      d->sgIo.dxfer_direction = SG_DXFER_TO_DEV;
+    else
+      d->sgIo.dxfer_direction = SG_DXFER_NONE;
+
+    i = ioctl( m_deviceHandle, SG_IO, &d->sgIo );
+
+    if( ( d->sgIo.info&SG_INFO_OK_MASK ) != SG_INFO_OK )
+      i = -1;
+  }
+  else {
+#endif
+    d->cmd.buffer = (unsigned char*)data;
+    d->cmd.buflen = len;
+    if( dir == TR_DIR_READ )
+      d->cmd.data_direction = CGC_DATA_READ;
+    else if( dir == TR_DIR_WRITE )
+      d->cmd.data_direction = CGC_DATA_WRITE;
+    else
+      d->cmd.data_direction = CGC_DATA_NONE;
+    
+    i = ::ioctl( m_deviceHandle, CDROM_SEND_PACKET, &d->cmd );
+#ifdef SG_IO
+  }
+#endif    
 
   if( needToClose )
     m_device->close();
-
+    
   if( i ) {
     debugError( d->cmd.cmd[0],
 		d->sense.error_code,
